# TerraLith

./: .gitignore  HESIOD_0.6_COMPLETE_IMPLEMENTATION_SPECIFICATION.md  NODE_EDITOR_REFACTOR_PLAN.md  build.bat
.claude/: settings.local.json
TerraLith/: .gitmodules  CMakeLists.txt  README.md
TerraLith/Hesiod/: CMakeLists.txt
TerraLith/Hesiod/app/: main.cpp
TerraLith/Hesiod/include/hesiod/app/: app_settings.hpp  enum_mappings.hpp  hesiod_application.hpp  style_settings.hpp
TerraLith/Hesiod/include/hesiod/core/: preview_cache_manager.hpp  settings_manager.hpp  terminal_logger.hpp
TerraLith/Hesiod/include/hesiod/gpu/vulkan/: shader_paths.hpp.in  vulkan_buffer.hpp  vulkan_compute_test.hpp  vulkan_context.hpp  vulkan_erosion_pipeline.hpp  vulkan_generic_pipeline.hpp  vulkan_noise_pipeline.hpp
TerraLith/Hesiod/include/hesiod/gui/: darkstyle.css
TerraLith/Hesiod/include/hesiod/gui/widgets/: app_settings_window.hpp  bake_config_dialog.hpp  graph_node_widget.hpp  graph_tabs_widget.hpp  main_window.hpp  node_attributes_widget.hpp  node_settings_widget.hpp  undo_commands.hpp
TerraLith/Hesiod/include/hesiod/gui/workers/: graph_worker.hpp
TerraLith/Hesiod/include/hesiod/model/graph/: bake_config.hpp  graph_manager.hpp  graph_node.hpp
TerraLith/Hesiod/include/hesiod/model/nodes/: base_node.hpp  node_factory.hpp  node_runtime_info.hpp
TerraLith/Hesiod/shaders/: abs.comp  blur_horizontal.comp  blur_vertical.comp  clamp.comp  combiner_add.comp  combiner_blend.comp  combiner_divide.comp  combiner_max.comp  combiner_min.comp  combiner_multiply.comp  combiner_subtract.comp  cos.comp  fold.comp  gabor_wave_fbm.comp  gain.comp  gamma_correction.comp  gaussian_decay.comp  hydraulic_blur.comp  hydraulic_erosion.comp  inverse.comp  noise_fbm.comp  normal_map.comp  remap.comp  rescale.comp  saturate.comp  select_slope.comp  shift_elevation.comp  slope_aspect.comp  smoothstep.comp  vector_add.comp
TerraLith/Hesiod/src/app/: app_settings.cpp  hesiod_application.cpp
TerraLith/Hesiod/src/core/: preview_cache_manager.cpp  settings_manager.cpp  terminal_logger.cpp
TerraLith/Hesiod/src/gpu/vulkan/: vulkan_buffer.cpp  vulkan_compute_test.cpp  vulkan_context.cpp  vulkan_erosion_pipeline.cpp  vulkan_generic_pipeline.cpp  vulkan_noise_pipeline.cpp
TerraLith/Hesiod/src/gui/utils/: apply_global_style.cpp
TerraLith/Hesiod/src/gui/widgets/: app_settings_window.cpp  bake_config_dialog.cpp  graph_config_widget.cpp  graph_editor_widget.cpp  graph_node_widget.cpp  graph_tabs_widget.cpp  main_window.cpp  node_attributes_widget.cpp  node_settings_widget.cpp  undo_commands.cpp
TerraLith/Hesiod/src/gui/widgets/viewers/: viewer.cpp  viewer_3d.cpp
TerraLith/Hesiod/src/gui/workers/: graph_worker.cpp
TerraLith/Hesiod/src/model/: utils.cpp
TerraLith/Hesiod/src/model/graph/: bake_config.cpp  graph_manager.cpp  override_export_nodes_settings.cpp
TerraLith/Hesiod/src/model/nodes/: base_node.cpp  node_factory.cpp
TerraLith/Hesiod/src/model/nodes/nodes_function/: abs.cpp  advanced_mountain_range.cpp  alpine_peaks.cpp  blend.cpp  clamp.cpp  combiner_add.cpp  combiner_divide.cpp  combiner_max.cpp  combiner_min.cpp  combiner_multiply.cpp  combiner_subtract.cpp  cos.cpp  export_heightmap.cpp  fold.cpp  foothills_transition.cpp  gabor_wave_fbm.cpp  gain.cpp  gamma_correction.cpp  gaussian_decay.cpp  glacier_formation.cpp  gradient_angle.cpp  gradient_norm.cpp  heightmap_to_normal_map.cpp  hydraulic_blur.cpp  hydraulic_stream.cpp  inverse.cpp  karst_terrain.cpp  lava_flow_field.cpp  noise_fbm.cpp  remap.cpp  rescale.cpp  saturate.cpp  select_slope.cpp  shift_elevation.cpp  smooth_cpulse.cpp  smoothstep.cpp  stratified_erosion.cpp  tree_placement.cpp
TerraLith/cmake/: HesiodCompilerOptions.cmake  HesiodPlatform.cmake
TerraLith/docs/: APPLICATION_FEATURES.md  NODE_REFERENCE.md
TerraLith/docs/imgui_redesign/: dockspace_layout.hpp  node_ux_and_properties.hpp  theme_terralith.hpp
